@@ -1,3 +1,11 @@
+2000-01-31  Nick Clifton  <nickc@cygnus.com>
+
+	* gas/arm/inst.s: Include test of ATPCS register naming
+	conventions.
+
+	* gas/arm/float.s: Include test of ATPCS register naming
+	conventions.
+
 Fri Jan 21 12:48:06 2000  H.J. Lu <hjl@gnu.org>
 
 	* gas/i386/general.l: Support a.out.
